--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">tripPhoto</string>
+    <string name="google_maps_key">AIzaSyBm4-UawJS3bguYDcU5r3GTC0pwVg3Oq4w</string>
 </resources>
