--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">tripPhoto</string>
     <string name="google_maps_key">AIzaSyA5E85XZjrB5vPmiH8gnouZXspwleKfnB8</string>
+    <string name="search_here">Search Here!</string>
 </resources>
