--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="database_all_delete">database all delete</string>
     <string name="logout_success">logout Success</string>
     <string name="delete_all_data">Delete All TripData</string>
+    <string name="setting">Setting</string>
 </resources>
