--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="trip_contenttype">Type</string>
     <string name="trip_distance">Distance from center of map</string>
     <string name="m_unit_format">%f m</string>
+    <string name="savetrip">Save Trip</string>
 </resources>
