--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="trip_save">Trip Saved!!</string>
     <string name="trip_remove">Remove Trip</string>
     <string name="history">My Favorite Place</string>
+    <string name="location_permission_success">Location permission is granted</string>
 </resources>
